Regression: crash in BKE_mesh_tag_coords_changed when modifying vertex coods of appended item via script #99171

Closed
opened 2022-06-25 19:53:58 +02:00 by Chris Eveleigh · 10 comments

System Information
Operating system: Linux-5.17.4-200.fc35.x86_64-x86_64-with-glibc2.34 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.17.4-200.fc35.x86_64, LLVM 13.0.0) AMD 4.5 (Core Profile) Mesa 21.3.8

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-24 21:39, hash: 12bde317f4
Worked: I have commit d2a3b99ff7 working, but it looks like the change was introduced in 54182e

Short description of error
using python scripting to modify vertex coordinates crashes blender under some circumstances. So far I can reliably get a crash if the object has been appended from another file or if several 'modify, undo' steps are repeated.blender.crash.txt

Exact steps for others to reproduce the error
append an object from another file. (i just saved the default scene and imported Cube from it).
in the python console do:
bpy.data.objects[object name].data.vertices- [x].co = (5, 5, 5)

alternatively, to crash without appending from a source, try from a new scene, repeating:
bpy.data.objects["Cube"].data.vertices- [x].co = (5, 5, 5)
ctrl-z to undo

a few times. i usually get a crash in 3-4 repeats.

**System Information** Operating system: Linux-5.17.4-200.fc35.x86_64-x86_64-with-glibc2.34 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.17.4-200.fc35.x86_64, LLVM 13.0.0) AMD 4.5 (Core Profile) Mesa 21.3.8 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-24 21:39, hash: `12bde317f4` Worked: I have commit d2a3b99ff7ab working, but it looks like the change was introduced in 54182e **Short description of error** using python scripting to modify vertex coordinates crashes blender under some circumstances. So far I can reliably get a crash if the object has been appended from another file or if several 'modify, undo' steps are repeated.[blender.crash.txt](https://archive.blender.org/developer/F13229449/blender.crash.txt) **Exact steps for others to reproduce the error** append an object from another file. (i just saved the default scene and imported Cube from it). in the python console do: bpy.data.objects[*object name*].data.vertices- [x].co = (5, 5, 5) alternatively, to crash without appending from a source, try from a new scene, repeating: bpy.data.objects["Cube"].data.vertices- [x].co = (5, 5, 5) ctrl-z to undo a few times. i usually get a crash in 3-4 repeats.
Author

Added subscriber: @whyohme

Added subscriber: @whyohme
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

It's this line here that it crashes: MEM_SAFE_FREE(mesh->runtime.looptris.array);
Apparently looptris.array is an illegal pointer. I'm not quite sure why yet.

It's this line here that it crashes: `MEM_SAFE_FREE(mesh->runtime.looptris.array);` Apparently `looptris.array` is an illegal pointer. I'm not quite sure why yet.
Member
CC @HooglyBoogly
Philipp Oeser changed title from crash in BKE_mesh_tag_coords_changed when modifying vertex coods of appended item via script to Regression: crash in BKE_mesh_tag_coords_changed when modifying vertex coods of appended item via script 2022-06-26 18:19:27 +02:00
Member

Seems we cant use rna_Mesh_update_positions_tag directly, we are acting on a MeshVert...
Get a mesh from that via rna_mesh(ptr)

Seems we cant use `rna_Mesh_update_positions_tag` directly, we are acting on a MeshVert... Get a mesh from that via `rna_mesh(ptr)`
Hans Goudey self-assigned this 2022-06-27 00:45:28 +02:00

This issue was referenced by 151fc2fcd8

This issue was referenced by 151fc2fcd8461a9a28a2e912148718d51e8efd37
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99171
No description provided.