Fix T99171: Crash in mesh vertices positions RNA update function

Solution found by Philipp Oeser (@lichtwerk), thanks.